# shsh-labs

./: .dockerignore  .env.example  .gitignore  .golangci.yml  CONTRIBUTING.md  CONVENTIONS.md  Dockerfile  Dockerfile.backend  LICENSE  Makefile  README.md  docker-compose.yml  eslint.config.js  go.mod  go.sum  index.html  package-lock.json  package.json  vite.config.js
.github/: BRANCH_PROTECTION.md
.github/workflows/: ci-required.yml  full-stack-manual.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md
cmd/server/: main.go
container/logging/: .bashrc_osc133  log_rotate.sh
docs/: docker.md
internal/agent/: agent_interface.go  conversation_logger.go  conversation_logger_test.go  grpc_client.go  handler.go  helpers.go  service.go  types.go
internal/api/: container.go  container_destroy_test.go  handler.go  handler_test.go
internal/config/: config.go
internal/container/: manager.go  ttl.go
internal/domain/: agent_session.go  challenge.go  session.go  user.go
internal/identity/: identity.go
internal/middleware/: cors.go
internal/shared/: sqlite_errors.go
python-agent/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
python-agent/app/: checkpointer.py  config.py  graph_builder.py  main.py  server.py  session_store.py  utils.py
python-agent/app/pipeline/: __init__.py  llm.py  patterns.py  safety.py  silence.py  types.py
python-agent/proto/: agent.proto
python-agent/tests/: test_graph_builder.py  test_llm_resilience.py  test_llm_tokens.py  test_patterns.py  test_safety.py  test_server_error_paths.py  test_server_streaming.py  test_session_reset.py  test_silence.py
src/: App.jsx  basic.test.jsx  index.css
web/: embed.go
(+44 files in other folders)
